--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug executable 'donetsk'",
+            "name": "debug on linux",
             "cargo": {
                 "args": [
                     "build",
@@ -25,7 +25,45 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug unit tests in executable 'donetsk'",
+            "name": "debug unit tests on linux",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bin=donetsk",
+                    "--package=donetsk"
+                ],
+                "filter": {
+                    "name": "donetsk",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        }
+        {
+            "type": "cppvsdbg",
+            "request": "launch",
+            "name": "debug on windows",
+            "program": "${workspaceRoot}/target/debug/donetsk.exe",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=donetsk",
+                    "--package=donetsk"
+                ],
+                "filter": {
+                    "name": "donetsk",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "cppvsdbg",
+            "request": "launch",
+            "name": "debug unit tests on windows",
             "cargo": {
                 "args": [
                     "test",
