--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,9 @@ vulkano_text = "0.12.0"
 petgraph = "0.4.13"
 rand = "0.7.0"
 nalgebra = "0.18"
+
+[dev-dependencies]
+
+[[example]]
+name = "ftn_parser"
+path = "src/examples/ftn_parser/main.rs"
